<resources>
    <string name="app_name">Calculist</string>
    <string name="stdCal">Standard Calculator</string>
    <string name="sciCal">Scientific Calculator</string>
    <string name="FullCal">Calculator App</string>
    <string name="clear">C</string>
    <string name="backspace">\u232b</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="sqrt">√</string>
    <string name="cuberoot">\u221B</string>
    <string name="square">x²</string>
    <string name="cube">x\u00B3</string>
    <string name="tenpow">10\u207F</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="sininv">sin\u207B\u00B9</string>
    <string name="cosinv">cos\u207B\u00B9</string>
    <string name="taninv">tan\u207B\u00B9</string>
    <string name="posneg">±</string>
    <string name="arrow">↑</string>
    <string name="xpown">xⁿ</string>
    <string name="epown">eⁿ</string>
    <string name="pi">π</string>
    <string name="openBracket">(</string>
    <string name="closeBracket">)</string>
    <string name="history">History</string>

    <string name="invalidexp">Invalid Expression</string>
    <string name="mode1">Degree</string>
    <string name="mode2">Radian</string>
    <string name="toggle">SWITCH</string>
    <string name="naturalLog">ln</string>
    <string name="hyperbolicSine">sinh</string>
    <string name="hyperbolicCosine">cosh</string>
    <string name="hyperbolicTan">tanh</string>
    <string name="log">log</string>
    <string name="Mod">%</string>
    <string name="inverse">1/x</string>
    <string name="factorial">x!</string>
    <string name="percent">%</string>
    <string name="num0">0</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="plus">+</string>
    <string name="dot">.</string>
    <string name="signed">+/-</string>
    <string name="equals">=</string>
    <string name="minus">-</string>>
</resources>
