<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/tV_operation"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:textSize="32dp"
            android:text=""
            android:gravity="center|start" />

        <TextView
            android:id="@+id/tV_result"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:textSize="32dp"
            android:text=""
            android:gravity="center|end" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="12">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/buttonHistory"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/history" />

                <TextView
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="2"/>

                <Button
                    android:id="@+id/buttonBackspace"
                    style="@style/AppTheme.Button"
                    android:text="@string/backspace" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/buttonClear"
                    style="@style/AppTheme.Button"
                    android:text="@string/clear" />

                <Button
                    android:id="@+id/buttonParan"
                    style="@style/AppTheme.Button"
                    android:text="( )" />

                <Button
                    android:id="@+id/buttonPercent"
                    style="@style/AppTheme.Button"
                    android:text="@string/percent" />

                <Button
                    android:id="@+id/buttonDivide"
                    style="@style/AppTheme.Button"
                    android:text="@string/divide" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/button7"
                    android:theme="@style/AppTheme.Button"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:text="7"
                    android:textSize="24dp"
                    android:textColor="@color/materialWhite"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:onClick="onClick" />

                <Button
                    android:id="@+id/button8"
                    style="@style/AppTheme.Button"
                    android:text="8" />

                <Button
                    android:id="@+id/button9"
                    style="@style/AppTheme.Button"
                    android:text="9" />

                <Button
                    android:id="@+id/buttonMultiply"
                    style="@style/AppTheme.Button"
                    android:text="@string/multiply" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/button4"
                    style="@style/AppTheme.Button"
                    android:layout_marginLeft="-1dp"
                    android:layout_marginTop="-1dp"
                    android:layout_marginRight="-1dp"
                    android:layout_marginBottom="-1dp"
                    android:text="4" />

                <Button
                    android:id="@+id/button5"
                    style="@style/AppTheme.Button"
                    android:layout_marginLeft="-1dp"
                    android:layout_marginTop="-1dp"
                    android:layout_marginRight="-1dp"
                    android:layout_marginBottom="-1dp"
                    android:text="5" />

                <Button
                    android:id="@+id/button6"
                    style="@style/AppTheme.Button"
                    android:layout_marginLeft="-1dp"
                    android:layout_marginTop="-1dp"
                    android:layout_marginRight="-1dp"
                    android:layout_marginBottom="-1dp"
                    android:text="6" />

                <Button
                    android:id="@+id/buttonMinus"
                    style="@style/AppTheme.Button"
                    android:layout_marginLeft="-1dp"
                    android:layout_marginTop="-1dp"
                    android:layout_marginRight="-1dp"
                    android:layout_marginBottom="-1dp"
                    android:text="-" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/button1"
                    style="@style/AppTheme.Button"
                    android:text="1" />

                <Button
                    android:theme="@style/BlueGreyAccent"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/button2"
                    android:text="2"
                    android:textSize="24dp"
                    android:textColor="@color/materialWhite"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:onClick="onClick" />

                <Button
                    android:id="@+id/button3"
                    style="@style/AppTheme.Button"
                    android:text="3" />

                <Button
                    android:id="@+id/buttonPlus"
                    style="@style/AppTheme.Button"
                    android:text="+" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/buttonDot"
                    style="@style/AppTheme.Button"
                    android:text="." />

                <Button
                    android:id="@+id/button0"
                    style="@style/AppTheme.Button"
                    android:text="0" />

                <Button
                    android:id="@+id/buttonSigned"
                    style="@style/AppTheme.Button"
                    android:text="+/-" />

                <Button
                    android:id="@+id/buttonEquals"
                    style="@style/AppTheme.Button"
                    android:text="=" />
            </TableRow>

        </TableLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>